# flang

./: .drone.yml  .gitignore  CMakeLists.txt
.github/workflows/: build_flang.yml  drone.sh
include/: legacy-util-api.h
lib/scutil/: cpu-stopwatch.c  lockfile.c  path-utils.c  pgnewfil.c
runtime/: CMakeLists.txt
runtime/flang/: CMakeLists.txt  access3f.c  alias.c  chdir3f.c  close.c  cplxf.c  curdir.c  dtime3f.c  etime3f.c  fsync3f.c  ftnhdr.F  getpid3f.c  global.h  hand.c  heapinit.c  ieee_arithmetic.F95  ieee_exceptions.F95  initpar.c  iso_c_bind.F95  map.c  miscsup_com.c  mmcmplx16.c  sleep3f.c  sleepqq3f.c  stat_linux.c  time3f.c  timef3f.c  usrio_smp.c  utils.c  wintimes.c  xfer_heap_dum.c
runtime/flangrti/: CMakeLists.txt  trace_lin.c
runtime/include/: FuncArgMacros.h  memops.h  mthdecls.h  stdioInterf.h  wintimes.h
runtime/libpgmath/lib/: CMakeLists.txt
runtime/libpgmath/test/: CMakeLists.txt
runtime/libpgmath/tools/: tmp-mth-check.ps1  tmp-mth_alldefs.ps1  tmp-mth_statsdefs_generic.ps1  tmp-mth_statsdefs_x86_64.ps1
runtime/ompstub/: CMakeLists.txt
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  Driver.cpp  Driver.h  ErrorHandler.cpp  ErrorHandler.h  Examples.txt  Lower.cpp  Options.cpp  Options.h  Options.inc.d  Options.td  Upper.cpp  flang.cpp
tools/driver/Platform/: Linux.cpp  Linux.h  MSVC.cpp  MSVC.h  Platform.h
tools/flang1/flang1exe/: CMakeLists.txt  bblock.c  comm.c  commgen.c  comminvar.c  datadep.c  flow.c  func.c  hlvect.c  inliner.c  interf.c  lower.c  main.c  outconv.c  (+9 more)
tools/shared/: direct.c  ilidir.c  pragma.c
(+22 files in other folders)
